--- a/DQN_sparse_map/test.ipynb
+++ b/DQN_sparse_map/test.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -318,21 +318,16 @@
      "output_type": "stream",
      "text": [
       "/home/sidd/Human-in-the-loop-RL\n",
-      "DQN Initialized\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for NeuralNet:\n\tMissing key(s) in state_dict: \"linear4.1.weight\", \"linear4.1.bias\", \"linear4.1.running_mean\", \"linear4.1.running_var\", \"linear5.0.weight\", \"linear5.0.bias\". \n\tsize mismatch for linear3.0.weight: copying a param with shape torch.Size([64, 128]) from checkpoint, the shape in current model is torch.Size([128, 128]).\n\tsize mismatch for linear3.0.bias: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.weight: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.bias: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.running_mean: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.running_var: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear4.0.weight: copying a param with shape torch.Size([4, 64]) from checkpoint, the shape in current model is torch.Size([64, 128]).\n\tsize mismatch for linear4.0.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([64]).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m lr \u001b[39m=\u001b[39m \u001b[39m1e-4\u001b[39m\t\t\t\u001b[39m# Learning rate for Q, M models\u001b[39;00m\n\u001b[1;32m     13\u001b[0m DQN \u001b[39m=\u001b[39m DQN_Agent(env, test_env, lr, device)\n\u001b[0;32m---> 14\u001b[0m DQN\u001b[39m.\u001b[39;49mcheck_model_values(\u001b[39m'\u001b[39;49m\u001b[39mDQN_sparse_map/100k/v2/Plots/offline_trained\u001b[39;49m\u001b[39m'\u001b[39;49m, [\u001b[39m0\u001b[39;49m,\u001b[39m11\u001b[39;49m])\n",
-      "File \u001b[0;32m~/Human-in-the-loop-RL/DQN_sparse_map/dqn.py:728\u001b[0m, in \u001b[0;36mDQN_Agent.check_model_values\u001b[0;34m(self, modelsdir, posn)\u001b[0m\n\u001b[1;32m    725\u001b[0m device \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdevice(\u001b[39m'\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mis_available() \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    727\u001b[0m Q \u001b[39m=\u001b[39m QNet(device, \u001b[39m1e-4\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m15k/v5/\u001b[39m\u001b[39m'\u001b[39m)\t\u001b[39m# logdir does not matter here\u001b[39;00m\n\u001b[0;32m--> 728\u001b[0m Q\u001b[39m.\u001b[39;49mload_model(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(modelsdir, \u001b[39m'\u001b[39;49m\u001b[39mQmodel.pth\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m    729\u001b[0m M \u001b[39m=\u001b[39m MNet(device, \u001b[39m1e-4\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m15k/v5/\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    730\u001b[0m M\u001b[39m.\u001b[39mload_model(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(modelsdir, \u001b[39m'\u001b[39m\u001b[39mMmodel.pth\u001b[39m\u001b[39m'\u001b[39m))\n",
-      "File \u001b[0;32m~/Human-in-the-loop-RL/DQN_sparse_map/dqn.py:38\u001b[0m, in \u001b[0;36mQNet.load_model\u001b[0;34m(self, model_file)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_model\u001b[39m(\u001b[39mself\u001b[39m, model_file):\n\u001b[1;32m     36\u001b[0m \t\u001b[39m# Helper function to load an existing model.\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \t\u001b[39m# e.g.: torch.save(self.model.state_dict(), model_file)\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m \t\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49mload_state_dict(torch\u001b[39m.\u001b[39;49mload(model_file))\n",
-      "File \u001b[0;32m~/anaconda3/envs/hitlrl/lib/python3.10/site-packages/torch/nn/modules/module.py:1667\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m   1662\u001b[0m         error_msgs\u001b[39m.\u001b[39minsert(\n\u001b[1;32m   1663\u001b[0m             \u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMissing key(s) in state_dict: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1664\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(k) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m missing_keys)))\n\u001b[1;32m   1666\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(error_msgs) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m-> 1667\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mError(s) in loading state_dict for \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1668\u001b[0m                        \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(error_msgs)))\n\u001b[1;32m   1669\u001b[0m \u001b[39mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for NeuralNet:\n\tMissing key(s) in state_dict: \"linear4.1.weight\", \"linear4.1.bias\", \"linear4.1.running_mean\", \"linear4.1.running_var\", \"linear5.0.weight\", \"linear5.0.bias\". \n\tsize mismatch for linear3.0.weight: copying a param with shape torch.Size([64, 128]) from checkpoint, the shape in current model is torch.Size([128, 128]).\n\tsize mismatch for linear3.0.bias: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.weight: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.bias: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.running_mean: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear3.1.running_var: copying a param with shape torch.Size([64]) from checkpoint, the shape in current model is torch.Size([128]).\n\tsize mismatch for linear4.0.weight: copying a param with shape torch.Size([4, 64]) from checkpoint, the shape in current model is torch.Size([64, 128]).\n\tsize mismatch for linear4.0.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([64])."
+      "True\n",
+      "DQN Initialized\n",
+      "m, and n are:  11 16\n",
+      "shape of all_state_tensors:  torch.Size([176, 1, 5, 5]) torch.Size([176, 2])\n",
+      "Q Values: tensor([-10.1215,  -9.5636,  -7.8181,  -5.6934, -12.5862], device='cuda:0',\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "m, and n are:  11 16\n",
+      "shape of all_state_tensors:  torch.Size([176, 1, 5, 5]) torch.Size([176, 2])\n",
+      "Q Values: tensor([-10.1215,  -9.5636,  -7.8181,  -5.6934, -12.5862], device='cuda:0',\n",
+      "       grad_fn=<SelectBackward0>)\n"
      ]
     }
    ],
@@ -344,13 +339,16 @@
     "os.chdir('/home/sidd/Human-in-the-loop-RL/')\n",
     "print(os.getcwd())\n",
     "\n",
-    "env = Grid(patch_size=5)\n",
+    "print(os.path.isdir('DQN_sparse_map/Ocean/20k/v2/alg1/models'))\n",
+    "\n",
+    "env = Grid(patch_size=5, expert_penalty=-5)\n",
     "test_env = Grid(0, patch_size=5)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else \"cpu\")\n",
     "lr = 1e-4\t\t\t# Learning rate for Q, M models\n",
     "\n",
     "DQN = DQN_Agent(env, test_env, lr, device)\n",
-    "DQN.check_model_values('DQN_sparse_map/100k/v2/Plots/offline_trained', [0,11])"
+    "DQN.check_model_values('DQN_sparse_map/Ocean/20k/v7/alg1/models', [3,10], alg2=False)\n",
+    "DQN.check_model_values('DQN_sparse_map/Ocean/20k/v8/alg1/models', [3,10], alg2=False)\n"
    ]
   },
   {
