monte carlo for alg1

--- a/DQN_sparse_map/experiments.ipynb
+++ b/DQN_sparse_map/experiments.ipynb
@@ -494,7 +494,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save and load an entier model"
+    "Running algo1 monte carlo estimates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DQN Initialized\n",
+      "Episode: 0\n",
+      "Episode: 100\n",
+      "Episode: 200\n",
+      "Episode: 300\n",
+      "Episode: 400\n",
+      "Episode: 500\n",
+      "Episode: 600\n",
+      "Episode: 700\n",
+      "Episode: 800\n",
+      "Episode: 900\n",
+      "Average number of expert calls made:  23.992\n",
+      "Average return using best action plot:  -139.672\n",
+      "Percentage of episodes stuck in infinity loop:  0.533\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from sparse_env import Grid\n",
+    "from dqn import DQN_Agent\n",
+    "os.chdir('/home/sidd/Human-in-the-loop-RL/')\n",
+    "\n",
+    "\n",
+    "lr = 5e-5\t\t\t# Learning rate for Q, M models\n",
+    "alg2 = False\n",
+    "logdir = 'DQN_sparse_map/Ocean/30k/v9/alg1'\n",
+    "expert_penalty = -0.9\t# Value should be negative\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else \"cpu\")\n",
+    "torch.set_num_threads(4)\n",
+    "\n",
+    "# Adding all hyperparametres to a text file\n",
+    "os.makedirs(logdir, exist_ok=True)\n",
+    "\n",
+    "env = Grid(patch_size=5, expert_map_f = 'DQN_sparse_map/Ocean/expert_policy.npy', expert_penalty=expert_penalty)\n",
+    "test_env = Grid(0, patch_size=5)\n",
+    "DQN = DQN_Agent(env, test_env, lr, device, burn_in=2)\n",
+    "DQN.policy_rollout(1000, smoothing=100, max_steps=120, best_action_f='DQN_sparse_map/Ocean/30k/v4/alg1/Plots/Best_actions.npy')"
    ]
   }
  ],
